--- a/public/languages/ua.json
+++ b/public/languages/ua.json
@@ -1,5 +1,15 @@
 {
-	"home": {
-		"test": "Привіт Світ!"
+	"auth": {
+		"register": {
+			"heading": "Створити обліковий запис",
+			"backButtonLabel": "Вже маєте обліковий запис? Ввійти",
+			"usernameLabel": "Ім'я користувача",
+			"emailLabel": "Електронна пошта",
+			"passwordLabel": "Пароль",
+			"submitButton": "Зареєструватися",
+			"successAlertTitle": "Перевірте свою електронну пошту",
+			"successAlertDescription": "На вашу поштову скриньку було надіслано лист з підтвердженням. Якщо ви не бачите листа, перевірте папку зі спамом.",
+			"errorMessage": "Помилка при створенні акаунта"
+		}
 	}
 }
