--- a/public/languages/ua.json
+++ b/public/languages/ua.json
@@ -10,6 +10,11 @@
 			"successAlertTitle": "Перевірте свою електронну пошту",
 			"successAlertDescription": "На вашу поштову скриньку було надіслано лист з підтвердженням. Якщо ви не бачите листа, перевірте папку зі спамом.",
 			"errorMessage": "Помилка при створенні акаунта"
+		},
+		"verify": {
+			"heading": "Верифікація облікового запису",
+			"successMessage": "Обліковий запис підтверджено",
+			"errorMessage": "Помилка верифікації"
 		}
 	}
 }
