--- a/public/languages/ua.json
+++ b/public/languages/ua.json
@@ -1,8 +1,9 @@
 {
 	"auth": {
 		"register": {
+			"head": "Sign up",
 			"heading": "Створити обліковий запис",
-			"backButtonLabel": "Вже маєте обліковий запис? Ввійти",
+			"backButtonLabel": "Вже маєте обліковий запис? Ввійти!",
 			"usernameLabel": "Ім'я користувача",
 			"emailLabel": "Електронна пошта",
 			"passwordLabel": "Пароль",
@@ -15,6 +16,20 @@
 			"heading": "Верифікація облікового запису",
 			"successMessage": "Обліковий запис підтверджено",
 			"errorMessage": "Помилка верифікації"
+		},
+		"login": {
+			"head": "Sign in",
+			"heading": "З поверненням!",
+			"backButtonLabel": "Не маєте облікового запису? Зареєструйтеся!",
+			"loginLabel": "Ім'я користувача або Email",
+			"loginDescription": "Ваше ім'я користувача або електронна пошта, яку ви використовували під час реєстрації.",
+			"passwordLabel": "Пароль",
+			"pinLabel": "6-значний код",
+			"pinDescription": "Введіть код з вашого додатку для автентифікації.",
+			"forgotPassword": "Забули пароль?",
+			"submitButton": "Ввійти",
+			"successMessage": "Ви успішно увійшли до системи",
+			"errorMessage": "Помилка при вході в систему"
 		}
 	}
 }
