--- a/public/languages/ua.json
+++ b/public/languages/ua.json
@@ -24,7 +24,7 @@
 			"loginLabel": "Ім'я користувача або Email",
 			"loginDescription": "Ваше ім'я користувача або електронна пошта, яку ви використовували під час реєстрації.",
 			"passwordLabel": "Пароль",
-			"pinLabel": "6-значний код",
+			"totpVerification": "Двофакторна аутентифікація",
 			"pinDescription": "Введіть код з вашого додатку для автентифікації.",
 			"forgotPassword": "Забули пароль?",
 			"submitButton": "Ввійти",
