--- a/public/languages/ua.json
+++ b/public/languages/ua.json
@@ -30,6 +30,24 @@
 			"submitButton": "Ввійти",
 			"successMessage": "Ви успішно увійшли до системи",
 			"errorMessage": "Помилка при вході в систему"
+		},
+		"resetPassword": {
+			"heading": "Скидання паролю",
+			"backButtonLabel": "Вже маєте обліковий запис? Ввійти!",
+			"emailLabel": "Електронна пошта",
+			"submitButton": "Скинути пароль",
+			"successAlertTitle": "Посилання надіслано",
+			"successAlertDescription": "Ми надіслали посилання для відновлення паролю на вашу електронну пошту. Якщо у вас увімкнені сповіщення в Telegram, посилання також буде надіслано туди.",
+			"errorMessage": "Користувача з такою електронною поштою не знайдено"
+		},
+		"newPassword": {
+			"heading": "Новий пароль",
+			"backButtonLabel": "Вже маєте обліковий запис? Ввійти!",
+			"passwordLabel": "Новий пароль",
+			"passwordRepeatLabel": "Повторіть пароль",
+			"submitButton": "Продовжити",
+			"successMessage": "Пароль успішно змінено",
+			"errorMessage": "Помилка при встановленні нового пароля"
 		}
 	}
 }
