--- a/public/languages/en.json
+++ b/public/languages/en.json
@@ -1,4 +1,20 @@
 {
+	"sidebar": {
+		"main": {
+			"dashboard": "Dashboard",
+			"projects": "Projects"
+		},
+		"projects": {
+			"heading": "YOUR PROJECTS",
+			"task": "Tasks",
+			"analytics": "Analytics",
+			"docs": "Docs"
+		},
+		"user": {
+			"settings": "Налаштування",
+			"logout": "Вийти"
+		}
+	},
 	"auth": {
 		"register": {
 			"head": "Sign up",
