--- a/public/languages/ua.json
+++ b/public/languages/ua.json
@@ -24,6 +24,25 @@
 			"appearance": "Зовнішній вигляд",
 			"notifications": "Сповіщення",
 			"sessions": "Сеанси"
+		},
+		"profile": {
+			"header": {
+				"heading": "Профіль",
+				"description": "Налаштуйте свій профіль, змінюючи аватар, особисту інформацію та посилання на соціальні мережі. Зробіть свій профіль видимим та унікальним для інших!"
+			},
+			"avatar": {
+				"heading": "Фото профілю",
+				"updateButton": "Змінити фото профілю",
+				"confirmModal": {
+					"heading": "Видалити",
+					"message": "Ви впевнені, що хочете видалити фото профілю? Цю дію не можна скасувати."
+				},
+				"info": "Ви можете завантажити зображення у форматах JPG, JPEG, PNG, WEBP або GIF. Максимальний розмір файлу — 10 МБ.",
+				"successUpdateMessage": "Ваше фото профілю успішно оновлено!",
+				"errorUpdateMessage": "Щось пішло не так під час оновлення фото профілю. Спробуйте ще раз.",
+				"successRemoveMessage": "Ваш аватар успішно видалено!",
+				"errorRemoveMessage": "Щось пішло не так під час видалення аватара. Спробуйте ще раз."
+			}
 		}
 	},
 	"auth": {
@@ -75,6 +94,12 @@
 			"submitButton": "Продовжити",
 			"successMessage": "Пароль успішно змінено",
 			"errorMessage": "Помилка при встановленні нового пароля"
+		}
+	},
+	"components": {
+		"confirmModal": {
+			"cancel": "Скасувати",
+			"continue": "Продовжити"
 		}
 	}
 }
