--- a/public/languages/ua.json
+++ b/public/languages/ua.json
@@ -77,6 +77,50 @@
 				"noDataSpan": "Додайте посилання на свої соц. мережі, щоб зробити свій профіль більш особистим та унікальним.",
 				"errorReorderMessage": "Помилка під час зміни порядку соц. мереж"
 			}
+		},
+		"account": {
+			"header": {
+				"heading": "Аккаунт",
+				"description": "Керуйте налаштуваннями вашого акаунта, включно зі зміною доступу, безпекою та можливістю деактивації.",
+				"securityHeading": "Безпека",
+				"securityDescription": "Налаштуйте двофакторну аутентифікацію для поліпшеного захисту ваших даних."
+			},
+			"email": {
+				"heading": "Адреса електронної пошти",
+				"emailLabel": "Пошта",
+				"submitButton": "Зберегти",
+				"successMessage": "Пошту успішно оновлено",
+				"errorMessage": "Помилка під час оновлення пошти"
+			},
+			"password": {
+				"heading": "Пароль від акаунту",
+				"oldPasswordLabel": "Старий пароль",
+				"newPasswordLabel": "Новий пароль",
+				"submitButton": "Зберегти",
+				"successMessage": "Пароль успішно оновлено",
+				"errorMessage": "Помилка під час оновлення пароля"
+			},
+			"twoFactor": {
+				"heading": "Аутентифікація за допомогою TOTP",
+				"description": "Збільште безпеку вашого облікового запису, активувавши аутентифікацію за допомогою TOTP. Цей додатковий рівень захисту вимагає введення унікального коду, що робить ваш акаунт менш уразливим до несанкціонованого доступу.",
+				"enable": {
+					"trigger": "Увімкнути",
+					"heading": "Увімкнення TOTP",
+					"qrInstructions": "Скануйте QR-код для додавання TOTP",
+					"secretCodeLabel": "Секретний код: ",
+					"pinLabel": "PIN-код",
+					"submitButton": "Підтвердити",
+					"successMessage": "Аутентифікацію за допомогою TOTP увімкнено",
+					"errorMessage": "Помилка під час верифікації коду"
+				},
+				"disable": {
+					"trigger": "Вимкнути",
+					"heading": "Ви справді хочете вимкнути TOTP?",
+					"message": "У разі вимкнення аутентифікації за допомогою TOTP ваш акаунт стане менш захищеним. Ви впевнені, що хочете продовжити?",
+					"successMessage": "Аутентифікацію через TOTP вимкнено",
+					"errorMessage": "Помилка під час вимкнення"
+				}
+			}
 		}
 	},
 	"auth": {
