--- a/public/languages/ua.json
+++ b/public/languages/ua.json
@@ -109,6 +109,7 @@
 					"qrInstructions": "Скануйте QR-код для додавання TOTP",
 					"secretCodeLabel": "Секретний код: ",
 					"pinLabel": "PIN-код",
+					"pinDescription": "Будь ласка, введіть 6-значний код, наданий вашим додатком для аутентифікації.",
 					"submitButton": "Підтвердити",
 					"successMessage": "Аутентифікацію за допомогою TOTP увімкнено",
 					"errorMessage": "Помилка під час верифікації коду"
