--- a/public/languages/ua.json
+++ b/public/languages/ua.json
@@ -122,6 +122,27 @@
 					"errorMessage": "Помилка під час вимкнення"
 				}
 			}
+		},
+		"appearance": {
+			"header": {
+				"heading": "Зовнішній вигляд",
+				"description": "Налаштуйте зовнішній вигляд інтерфейсу сайту відповідно до ваших вподобань. Оберіть тему та мову, які зроблять вашу взаємодію більш комфортною."
+			},
+			"theme": {
+				"heading": "Зміна теми",
+				"description": "Ви можете обрати темну або світлу тему для інтерфейсу сайту",
+				"activeLabel": "Активна"
+			},
+			"language": {
+				"heading": "Мова сайту",
+				"description": "Оберіть мову, яка буде використовуватися на сайті",
+				"selectPlaceholder": "Оберіть мову",
+				"successMessage": "Мову сайту успішно змінено"
+			},
+			"color": {
+				"heading": "Акцентний колір",
+				"description": "Оберіть акцентний колір для інтерфейсу"
+			}
 		}
 	},
 	"auth": {
