--- a/public/languages/ua.json
+++ b/public/languages/ua.json
@@ -143,6 +143,22 @@
 				"heading": "Акцентний колір",
 				"description": "Оберіть акцентний колір для інтерфейсу"
 			}
+		},
+		"notifications": {
+			"header": {
+				"heading": "Сповіщення",
+				"description": "Налаштуйте, як ви хочете отримувати сповіщення."
+			},
+			"siteNotifications": {
+				"heading": "Сповіщення на сайті",
+				"description": "Якщо ви вимкнете сповіщення на сайті, то не отримуватимете сповіщення про нові події, коментарі та інші важливі оновлення."
+			},
+			"telegramNotifications": {
+				"heading": "Сповіщення в Telegram",
+				"description": "Якщо ви ввімкнете сповіщення через Telegram, ваш обліковий запис зв'яжеться з вашим Telegram-акаунтом, і ви отримуватимете повідомлення про нові події, коментарі, скидання пароля та інші важливі оновлення."
+			},
+			"successMessage": "Налаштування повідомлень успішно оновлено",
+			"errorMessage": "Помилка під час оновлення налаштувань повідомлень"
 		}
 	},
 	"auth": {
