feat(session): add a list and the ability to delete a session

--- a/public/languages/en.json
+++ b/public/languages/en.json
@@ -159,6 +159,34 @@
 			},
 			"successMessage": "Notification settings updated successfully",
 			"errorMessage": "Error updating notification settings"
+		},
+		"sessions": {
+			"header": {
+				"heading": "Sessions",
+				"description": "Sessions represent devices you are using or have used to log into your account. You can view and remove active sessions to ensure the security of your account."
+			},
+			"info": {
+				"current": "Current Session",
+				"active": "Active Sessions",
+				"notFound": "No active sessions found"
+			},
+			"sessionItem": {
+				"deleteButton": "Remove",
+				"detailsButton": "Details",
+				"confirmModal": {
+					"heading": "Remove Session",
+					"message": "Are you sure you want to remove this session? This action will permanently delete the session on this device and terminate all active activities associated with it."
+				},
+				"successMessage": "Session removed successfully",
+				"errorMessage": "Error removing session"
+			},
+			"sessionModal": {
+				"heading": "Session Details",
+				"device": "Device:",
+				"location": "Location:",
+				"ipAddress": "IP Address:",
+				"createdAt": "Created At:"
+			}
 		}
 	},
 	"auth": {
@@ -218,6 +246,24 @@
 		"confirmModal": {
 			"cancel": "Cancel",
 			"continue": "Continue"
+		}
+	},
+	"utils": {
+		"formatDate": {
+			"months": {
+				"january": "January",
+				"february": "February",
+				"march": "March",
+				"april": "April",
+				"may": "May",
+				"june": "June",
+				"july": "July",
+				"august": "August",
+				"september": "September",
+				"october": "October",
+				"november": "November",
+				"december": "December"
+			}
 		}
 	}
 }
