--- a/public/languages/ua.json
+++ b/public/languages/ua.json
@@ -159,6 +159,34 @@
 			},
 			"successMessage": "Налаштування повідомлень успішно оновлено",
 			"errorMessage": "Помилка під час оновлення налаштувань повідомлень"
+		},
+		"sessions": {
+			"header": {
+				"heading": "Сеанси",
+				"description": "Сеанси - це пристрої, які ви використовуєте або які використовували для входу у ваш обліковий запис. Ви можете переглядати і видаляти активні сеанси, щоб забезпечити безпеку вашого облікового запису."
+			},
+			"info": {
+				"current": "Поточний сеанс",
+				"active": "Активні сеанси",
+				"notFound": "Активних сеансів не знайдено"
+			},
+			"sessionItem": {
+				"deleteButton": "Видалити",
+				"detailsButton": "Детальніше",
+				"confirmModal": {
+					"heading": "Видалити сеанс",
+					"message": "Ви впевнені, що хочете видалити цей сеанс? Ця дія призведе до незворотного видалення сесії на цьому пристрої та завершить усі активні дії, пов'язані з ним."
+				},
+				"successMessage": "Сеанс успішно видалено",
+				"errorMessage": "Помилка під час видалення сеансу"
+			},
+			"sessionModal": {
+				"heading": "Деталі сеансу",
+				"device": "Пристрій:",
+				"location": "Місцезнаходження:",
+				"ipAddress": "IP-адреса:",
+				"createdAt": "Створено:"
+			}
 		}
 	},
 	"auth": {
@@ -216,6 +244,24 @@
 		"confirmModal": {
 			"cancel": "Скасувати",
 			"continue": "Продовжити"
+		}
+	},
+	"utils": {
+		"formatDate": {
+			"months": {
+				"january": "січня",
+				"february": "лютого",
+				"march": "березня",
+				"april": "квітня",
+				"may": "травня",
+				"june": "червня",
+				"july": "липня",
+				"august": "серпня",
+				"september": "вересня",
+				"october": "жовтня",
+				"november": "листопада",
+				"december": "грудня"
+			}
 		}
 	}
 }
