--- a/public/languages/ua.json
+++ b/public/languages/ua.json
@@ -131,7 +131,9 @@
 			"theme": {
 				"heading": "Зміна теми",
 				"description": "Ви можете обрати темну або світлу тему для інтерфейсу сайту",
-				"activeLabel": "Активна"
+				"activeLabel": "Активна",
+				"dark": "Темна",
+				"light": "Світла"
 			},
 			"language": {
 				"heading": "Мова сайту",
@@ -187,6 +189,27 @@
 				"ipAddress": "IP-адреса:",
 				"createdAt": "Створено:"
 			}
+		}
+	},
+	"projects": {
+		"heading": "Ваші проекти",
+		"hello": "Вітаю",
+		"createButton": "Створити проект",
+		"noData": "Проекти не знайдено",
+		"noDataSpan": "Створіть новий проект, щоб почати над ним працювати. Ви також можете запросити інших користувачів до співпраці над проектом.",
+		"toggler": {
+			"gridView": "Вигляд сітки",
+			"listView": "Вигляд списку"
+		},
+		"create": {
+			"heading": "Створити проект",
+			"description": "Створіть новий проект та розпочніть роботу з вашою командою. Налаштуйте все необхідне для ефективної співпраці.",
+			"projectNamePlaceholder": "Назва проекту",
+			"projectDescriptionPlaceholder": "Опис",
+			"submitButton": "Створити",
+			"cancelButton": "Скасувати",
+			"successMessage": "Проект успішно створено",
+			"errorMessage": "Помилка при створенні проекту"
 		}
 	},
 	"auth": {
