--- a/public/languages/ua.json
+++ b/public/languages/ua.json
@@ -210,6 +210,51 @@
 			"cancelButton": "Скасувати",
 			"successMessage": "Проект успішно створено",
 			"errorMessage": "Помилка при створенні проекту"
+		},
+		"settings": {
+			"heading": "Налаштування проекту",
+			"description": "Налаштуйте свій проект. Змініть назву, опис, додайте учасників та налаштуйте інші параметри.",
+			"header": {
+				"general": "Загальні",
+				"members": "Учасники",
+				"labels": "Мітки",
+				"plan": "План"
+			},
+			"general": {
+				"cover": {
+					"updateButton": "Змінити обкладинку",
+					"confirmModal": {
+						"heading": "Видалити",
+						"message": "Ви впевнені, що хочете видалити обкладинку проекту? Цю дію не можна скасувати."
+					},
+					"successUpdateMessage": "Обкладинку проекту успішно оновлено!",
+					"errorUpdateMessage": "Щось пішло не так під час оновлення обкладинки проекту. Спробуйте ще раз.",
+					"successRemoveMessage": "Обкладинку проекту успішно видалено!",
+					"errorRemoveMessage": "Щось пішло не так під час видалення обкладинки проекту. Спробуйте ще раз."
+				},
+				"info": {
+					"heading": "Змінити інформацію",
+					"projectNamePlaceholder": "Назва проекту",
+					"projectDescriptionPlaceholder": "Опис",
+					"submitButton": "Зберегти зміни",
+					"successMessage": "Інформацію проекту успішно оновлено",
+					"errorMessage": "Помилка під час оновлення інформації проекту"
+				},
+				"delete": {
+					"heading": "Видалити проект",
+					"description": "Ця дія є незворотною. Всі дані проекту будуть безповоротно видалені.",
+					"deleteButton": "Видалити проект",
+					"confirmModal": {
+						"heading": "Видалити проект",
+						"message": "Ця дія не може бути скасована. Щоб підтвердити видалення, будь ласка, введіть",
+						"deleteLabel": "Ім'я проекту",
+						"cancelButton": "Скасувати",
+						"confirmButton": "Видалити"
+					},
+					"successMessage": "Проект успішно видалено",
+					"errorMessage": "Помилка під час видалення проекту"
+				}
+			}
 		}
 	},
 	"auth": {
