--- a/public/languages/ua.json
+++ b/public/languages/ua.json
@@ -254,6 +254,48 @@
 					"successMessage": "Проект успішно видалено",
 					"errorMessage": "Помилка під час видалення проекту"
 				}
+			},
+			"member": {
+				"heading": "Запросити учасників",
+				"description": "Запросіть інших користувачів до вашого проекту.",
+				"invite": {
+					"heading": "Додайте колег, клієнтів та консультантів",
+					"description": "Введіть електронну пошту та виберіть роль для кожного запрошеного користувача.",
+					"roleOptions": {
+						"admin": "Адмін",
+						"member": "Учасник",
+						"viewer": "Глядач"
+					},
+					"submitButton": "Запросити",
+					"cancelButton": "Скасувати",
+					"successMessage": "Запрошення успішно надіслано",
+					"errorMessage": "Помилка під час запрошення користувача"
+				},
+				"table": {
+					"columns": {
+						"user": "Користувач",
+						"email": "Пошта",
+						"role": "Роль",
+						"joined": "Приєднався"
+					},
+					"search": {
+						"placeholder": "Пошук..."
+					},
+					"filters": {
+						"role": "Роль",
+						"view": "Вид"
+					},
+					"noMembers": "Учасників не знайдено",
+					"alerError": "Помилка при завантаженні учасників"
+				},
+				"delete": {
+					"select": "Дії",
+					"heading": "Видалити учасника",
+					"message": "Ви впевнені, що хочете видалити цього учасника з проекту?",
+					"removeButton": "Видалити",
+					"successMessage": "Учасника успішно видалено",
+					"errorMessage": "Помилка під час видалення учасника"
+				}
 			}
 		}
 	},
