--- a/public/languages/ua.json
+++ b/public/languages/ua.json
@@ -296,6 +296,26 @@
 					"successMessage": "Учасника успішно видалено",
 					"errorMessage": "Помилка під час видалення учасника"
 				}
+			},
+			"labels": {
+				"heaing": "Мітки",
+				"create": {
+					"heading": "Створити мітку",
+					"description": "Створіть нову мітку для вашого проекту. Ви можете використовувати мітки для класифікації завдань та організації робочого процесу.",
+					"namePlaceholder": "Назва мітки",
+					"cancelButton": "Скасувати",
+					"submitButton": "Створити",
+					"successMessage": "Мітку успішно створено",
+					"errorMessage": "Помилка при створенні мітки"
+				},
+				"remove": {
+					"heading": "Видалити мітку",
+					"message": "Ви впевнені, що хочете видалити цю мітку? Ця дія призведе до видалення мітки з усіх завдань, до яких вона прикріплена.",
+					"select": "Дії",
+					"removeItem": "Видалити",
+					"successMessage": "Мітку успішно видалено",
+					"errorMessage": "Помилка під час видалення мітки"
+				}
 			}
 		}
 	},
